fixes home video text wrapping

--- a/themes/tgh/source/css/main.scss
+++ b/themes/tgh/source/css/main.scss
@@ -158,7 +158,6 @@ body {
 
   .home-video-wrapper {
     width: 100%;
-    height: 100%;
     float: none;
     max-width: $TWO-COLUMNS;
     margin: 0 auto;
